hphp/hack/test/typecheck/like_types/incorrect_type.php.exp
File "incorrect_type.php", line 4, characters 3-13:
  ~int
File "incorrect_type.php", line 7, characters 3-13:
  ~string
File "incorrect_type.php", line 12, characters 3-13:
  ~(function(int): void)
File "incorrect_type.php", line 11, characters 9-49:
Invalid "as" expression hint (Typing[4195])
File "incorrect_type.php", line 11, characters 27-48:
The "as" operator cannot be used with a function type
